fix: Floor전체조회 수정 (#371)